--- a/suplementos.html
+++ b/suplementos.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="food_style.css">
+    <link rel="stylesheet" href="suplementos_style.css">
     <title>Popeye Suplementos</title>
 </head>
 <body>
     <div class="container">
-        <header></header>
-        <img src="./imgs/popeye_strong.png" alt="logo-header" class="logoNavBar">
-        <div class="headerBtnGroup">
-            <button class="navBtn">FitFood</button>
-            <button class="navBtn">Academias</button>
-        </div>
+        <header class="header">
+            <img src="./imgs/popeye_strong.png" alt="logo-header" class="logoNavBar">
+            <p class="headerTitle">Popeye Suplementos</p>
+            <div class="headerBtnGroup">
+                <button class="navBtn">FitFood</button>
+                <button class="navBtn">Academias</button>
+            </div>
+        </header>
+        
     </div>
-    <p class="sectionTitle">Popeye Suplementos</p>
+    <p class="sectionTitle" id="backToTop">Popeye Suplementos</p>
     <p class="sectionDescription">Aqui você encontra as principais marcas de suplementos nacionais, com os melhores as melhores ofertas, confira:</p>
     <section class="gridContainer">
         <div class="mainContent">
