--- a/suplementos.html
+++ b/suplementos.html
@@ -19,22 +19,21 @@
         </header>
         
     </div>
-    <p class="sectionTitle" id="backToTop">Popeye Suplementos</p>
-    <p class="sectionDescription">Aqui você encontra as principais marcas de suplementos nacionais, com os melhores as melhores ofertas, confira:</p>
+    <p class="sectionDescription" id="backToTop">Aqui você encontra as principais marcas de suplementos nacionais, com as melhores ofertas, confira:</p>
     <section class="gridContainer">
         <div class="mainContent">
             <div class="categoryCard">
                 <img src="./imgs/max_logo.png" alt="mainCardImg" class="mainCardImg">
-                <p class="mainCategoryCardTitle">MAX TITANIUM</p>
                 <div class="cardBtnGroup">
-                    <button class="cardBtn">Whey Protein</button>
+                    <form action="https://www.maxtitanium.com.br/produtos/proteinas">
+                        <button type="submit" class="cardBtn">Whey Protein</button>
+                    </form>
                     <button class="cardBtn">Creatina</button>
                     <button class="cardBtn">Pré-treino</button>
                 </div>
             </div>
             <div class="categoryCard">
                 <img src="./imgs/integral_logo.png" alt="mainCardImg" class="mainCardImg">
-                <p class="mainCategoryCardTitle">INTEGRAL MÉDICA</p>
                 <div class="cardBtnGroup">
                     <button class="cardBtn">Whey Protein</button>
                     <button class="cardBtn">Creatina</button>
@@ -43,7 +42,6 @@
             </div>
             <div class="categoryCard">
                 <img src="./imgs/growth_logo.png" alt="mainCardImg" class="mainCardImg">
-                <p class="mainCategoryCardTitle">GROWTH SUPLEMENTOS</p>
                 <div class="cardBtnGroup">
                     <button class="cardBtn">Whey Protein</button>
                     <button class="cardBtn">Creatina</button>
@@ -52,7 +50,6 @@
             </div>
             <div class="categoryCard">
                 <img src="./imgs/probiotica_logo.png" alt="mainCardImg" class="mainCardImg">
-                <p class="mainCategoryCardTitle">PROBIÓTICA</p>
                 <div class="cardBtnGroup">
                     <button class="cardBtn">Whey Protein</button>
                     <button class="cardBtn">Creatina</button>
