links funcionais mainContent

--- a/suplementos.html
+++ b/suplementos.html
@@ -28,32 +28,54 @@
                     <form action="https://www.maxtitanium.com.br/produtos/proteinas">
                         <button type="submit" class="cardBtn">Whey Protein</button>
                     </form>
-                    <button class="cardBtn">Creatina</button>
-                    <button class="cardBtn">Pré-treino</button>
+                    <form action="https://www.maxtitanium.com.br/produtos/aminoacidos/creatina">
+                        <button type="submit" class="cardBtn">Creatina</button>
+                    </form>
+                    <form action="https://www.maxtitanium.com.br/produtos/pre-treino">
+                        <button type="submit" class="cardBtn">Pré-treino</button>
+                    </form>
                 </div>
             </div>
             <div class="categoryCard">
                 <img src="./imgs/integral_logo.png" alt="mainCardImg" class="mainCardImg">
                 <div class="cardBtnGroup">
-                    <button class="cardBtn">Whey Protein</button>
-                    <button class="cardBtn">Creatina</button>
-                    <button class="cardBtn">Pré-treino</button>
+                    <form action="https://www.integralmedica.com.br/Proteina/Whey-Protein">
+                        <button type="submit" class="cardBtn">Whey Protein</button>
+                    </form>
+                    <form action="https://www.integralmedica.com.br/aminoacidos/creatina">
+                        <button type="submit" class="cardBtn">Creatina</button>
+                    </form>
+                    <form action="https://www.integralmedica.com.br/pre-treino">
+                        <button type="submit" class="cardBtn">Pré-treino</button>
+                    </form>
                 </div>
             </div>
             <div class="categoryCard">
                 <img src="./imgs/growth_logo.png" alt="mainCardImg" class="mainCardImg">
                 <div class="cardBtnGroup">
-                    <button class="cardBtn">Whey Protein</button>
-                    <button class="cardBtn">Creatina</button>
-                    <button class="cardBtn">Pré-treino</button>
+                    <form action="https://www.gsuplementos.com.br/proteina/">
+                        <button type="submit" class="cardBtn">Whey Protein</button>
+                    </form>
+                    <form action="https://www.gsuplementos.com.br/creatina/">
+                        <button type="submit" class="cardBtn">Creatina</button>
+                    </form>
+                    <form action="https://www.gsuplementos.com.br/pre-treino/">
+                        <button type="submit" class="cardBtn">Pré-treino</button>
+                    </form>
                 </div>
             </div>
             <div class="categoryCard">
                 <img src="./imgs/probiotica_logo.png" alt="mainCardImg" class="mainCardImg">
                 <div class="cardBtnGroup">
-                    <button class="cardBtn">Whey Protein</button>
-                    <button class="cardBtn">Creatina</button>
-                    <button class="cardBtn">Pré-treino</button>
+                    <form action="https://www.probiotica.com.br/produtos/whey-protein-proteinas">
+                        <button type="submit" class="cardBtn">Whey Protein</button>
+                    </form>
+                    <form action="https://www.probiotica.com.br/Produtos/Creatina">
+                        <button type="submit" class="cardBtn">Creatina</button>
+                    </form>
+                    <form action="https://www.probiotica.com.br/produtos/pre-treino">
+                        <button type="submit" class="cardBtn">Pré-treino</button>
+                    </form>
                 </div>
             </div>
         </div>
